Correct Spacing
Fixed the spacing in between navbar elements.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,32 +1,44 @@
 #navbar {
-	width: 100%;
-	height: 50px;
+	width: 94.5%;
 	/* background-color: red; */
 	position: absolute;
-	display: block;
 }
 
 #navbar ul {
 	text-align: right;
-	margin: 0px 30px 0px 0px;
 }
 
 #navbar ul li{
 	display: inline-block;
 	font-family: arial, sans-serif;
 	font-size: 13px;
-	text-align: right;
-	padding: 0px 5px 0px 5px;
+	margin: 0px 5px 0px 5px;
 	text-align: center;
 }
 
 #navbar ul li:first-child{
 	opacity: .50;
-	padding: 0px 5px 15px 0px;
+	margin: 0px 4px 15px 0px;
+}
+
+#navbar ul li:nth-child(2){
+	margin: 0px 6px 0px 5px; /* done 5=2 */
 }
 
 #navbar ul li:nth-child(3){
-	padding: 15px 5px 15px 5px;
+	margin: 15px 2px 15px 5px; /* done 5=2 */
+}
+
+#navbar ul li:nth-child(4){
+	margin: 15px 8px 15px 9px; /* done 10=8 */
+}
+
+#navbar ul li:nth-child(5){
+	margin: 15px 15px 15px 8px; /* done 16=15 */
+}
+
+#navbar ul li:nth-child(6){
+	margin: 15px -23px 15px 0px;
 }
 
 #navbar ul li a{
@@ -48,7 +60,7 @@
 	background: url('res/i1_1967ca6a.png');
     background-repeat: no-repeat;
 	background-position: -132px -38px;
-	opacity: 0.50;
+	opacity: 0.54;
 	width: 30px;
 	height: 30px;
 	vertical-align: middle;
@@ -61,7 +73,7 @@
 	background-color: black;
 	background-position: -194px -21px;
 	border-radius: 100%;
-	opacity: 0.50;
+	opacity: 0.54;
 	width: 20px;
 	height: 20px;
 	vertical-align: middle;
